--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,3 +2,11 @@ runner.ignoreWarnings = true
 align.openParenCallSite = false
 align.openParenDefnSite = false
 danglingParentheses = false
+rewrite {
+  rules = [RedundantBraces]
+  redundantBraces {
+    includeUnitMethods = true
+    stringInterpolation = true
+    generalExpressions = false
+  }
+}
