rewrite: gen exp

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,6 +7,6 @@ rewrite {
   redundantBraces {
     includeUnitMethods = true
     stringInterpolation = true
-    generalExpressions = false
+    generalExpressions = true
   }
 }
