--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,7 +3,7 @@ align.openParenCallSite = false
 align.openParenDefnSite = false
 danglingParentheses = false
 rewrite {
-  rules = [RedundantBraces]
+  rules = [RedundantBraces, RedundantParens]
   redundantBraces {
     includeUnitMethods = true
     stringInterpolation = true
